ajax.css
body, html
{
    background-color:#222222;
    padding:0px;
    margin:1px;
    overflow:hidden; /* hide scroll bar */
}

.left_box
{
    float:left;
    width:490px;
}

.graphics
{
    padding-top:0px;
    padding-left:5px;
}

.rrdimage
{
    margin-top:0px;
    margin-bottom:5px;
    margin-left:0px;
    margin-right:10px;
    height:230px;
}

/* overlay covering rrdtool watermark */
.overlay
{
    position:relative; /* relative to image */
    top:-228px;
    left:475px;
    height:160px;
    width:15px;
    background-color:#222222;
}

/* the "updating graph" notification */
#update_popup_speed, #update_popup_con
{
    position:relative;
    font-family:helvetica;
    font-size:22px;
    top:-300px;
    left:180px;
    width:145px;
    background-color:#333333;
    color:#eeeeee;
    visibility:hidden;
}

/* a line marking 6.55 liters 
 * rrdtool cannot create one fixed line
 * so i'm doing this with a css overlay
 */
.consumption_line
{
    position:relative;
    top:-260px;
    left:51px;
    height:1px;
    width:408px;
    background-color:#eeeeee;
}

/* average consumption values underneath consumption graph */
.con_av
{
    position:absolute;
    top:212px;
    left:80px;
}

#con_av_short, #con_av_medium, #con_av_long
{
    font-family:helvetica;
    font-size:16px;
    color:#f00000;
    cursor:pointer;
}

/* average speed values underneath speed graph */
.speed_av
{
    position:absolute;
    top:447px;
    left:80px;
}

#speed_av_short, #speed_av_medium, #speed_av_long
{
    font-family:helvetica;
    font-size:16px;
    color:#f00000;
    cursor:pointer;
}

/* unit layout for values underneath speed graph*/
#av_unit
{
    font-family:helvetica;
    font-size:12px;
    color:#aaaaaa;
    
}


.right_box
{
    float:right;
    width:285px;
}

.plain_values
{
    text-align:right;
    margin:10px;
}

#con_km
{
    font-family:helvetica;
    font-size:68px;
    line-height:82px;
    color:#f00000;
}

#con_km_unit
{
    font-family:helvetica;
    font-size:18px;
    color:#aaaaaa;
    padding-left:5px;    
}

#speed
{
    font-family:helvetica;
    font-size:68px;
    line-height:82px;
    color:#f00000;
}

#speed_unit
{
    font-family:helvetica;
    font-size:18px;
    color:#aaaaaa;
    padding-left:5px;
}

.other_values
{
    margin-top:20px;
}

#con_h, #rpm, #temp1, #temp2, #voltage
{
    font-family:helvetica;
    font-size:28px;
    line-height:38px;
    color:#f00000;
}

.other_unit
{
    font-family:helvetica;
    font-size:18px;
    color:#aaaaaa;
    padding-left:5px;    
}


.footer
{
    text-align:right;
    position:absolute;
    bottom:0px;
    right:0px;
    margin-right:15px;
    margin-bottom:5px;
}

#debug
{
    font-family:courier;
    font-size:16px;
    margin-top:15px;
    margin-right:0px;
    padding-right:10px;
    padding:2px;
    color:#ffffff;
    background-color:#333333;
}

#version
{
    font-family:courier;
    font-size:14px;
    vertical-align:bottom;
    margin-top:5px;
    color:#ffffff;
}

